# north-mcp-python-sdk

./: README.md  pyproject.toml  test_client.py  test_custom_routes.py
.github/workflows/: ci.yml  test.yml
docs/: TESTING_AUTH.md  TOOL_NAMESPACING.md
examples/: client.py  counter.py  create_bearer_token.py  server.py  server_with_access_token.py  server_with_api_key_auth.py  server_with_auth.py  server_with_auth_tokens.py  server_with_citations.py  server_with_context.py  server_with_custom_routes.py  server_with_debug.py  server_with_destructive_tools.py  server_with_html.py  server_with_multiple_auth.py  server_with_namespacing.py  server_with_oauth_auth.py  server_with_secret.py  server_with_trusted_issuers.py  simple_custom_route.py  testing_comparison.py
examples/auth-provider-local-mcp/: README.md  config.yaml.template  docker-compose.yaml  main.py  pyproject.toml
examples/telemetry-demo/: main.py  pyproject.toml
src/north_mcp_python_sdk/: __init__.py  auth.py  middleware.py  north_context.py  north_server.py  telemetry.py  token_utils.py  types.py
stc_knowledge_tool/: database.py  server.py
tests/: conftest.py  test_auth_middleware.py  test_auth_providers.py  test_custom_routes.py  test_deprecation_warnings.py  test_fastmcp_middleware.py  test_get_auth_tokens_simple.py  test_get_north_context.py  test_namespacing.py  test_north_compatibility.py  test_north_mcp_server.py  test_north_result.py  test_north_token_verifier.py  test_oauth_auth_provider.py  test_oauth_with_utils.py  test_telemetry.py  test_trusted_issuers.py  test_utils.py  test_x_north_auth_backend.py  test_x_north_trusted_issuers.py
wise_examples/: README.md  get_google_access_token.py  pyproject.toml  simple_calculator.py  simple_calendar.py
